// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCard component onCloseClick for item 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root LinkCard-root-29 LinkCard-open-30 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="LinkCard-item-31"
      data-testid="linkCard-item"
    >
      <h6
        class="MuiTypography-root Typography-root-35 MuiTypography-h6 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        test
      </h6>
      <p
        class="MuiTypography-root LinkCard-subtitle-32 Typography-root-35 MuiTypography-body1"
        data-testid="typography"
      />
    </div>
    <div
      class="LinkCard-icon-33"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
      </svg>
    </div>
    <div
      class="MuiCollapse-root LinkCard-details-34 MuiCollapse-entered"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinkCard component renders correctly closed variant 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root LinkCard-root-1 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="LinkCard-item-3"
      data-testid="linkCard-item"
    >
      <h6
        class="MuiTypography-root Typography-root-7 MuiTypography-h6 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        test
      </h6>
      <p
        class="MuiTypography-root LinkCard-subtitle-4 Typography-root-7 MuiTypography-body1"
        data-testid="typography"
      />
    </div>
    <div
      class="LinkCard-icon-5"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
      </svg>
    </div>
    <div
      class="MuiCollapse-root LinkCard-details-6 MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinkCard component renders on open variant 1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root LinkCard-root-15 LinkCard-open-16 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="LinkCard-item-17"
      data-testid="linkCard-item"
    >
      <h6
        class="MuiTypography-root Typography-root-21 MuiTypography-h6 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        test
      </h6>
      <p
        class="MuiTypography-root LinkCard-subtitle-18 Typography-root-21 MuiTypography-body1"
        data-testid="typography"
      />
    </div>
    <div
      class="LinkCard-icon-19"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
      </svg>
    </div>
    <div
      class="MuiCollapse-root LinkCard-details-20 MuiCollapse-entered"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinkCard component renders onEnterd transition onClick  1`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root LinkCard-root-43 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="LinkCard-item-45"
      data-testid="linkCard-item"
    >
      <h6
        class="MuiTypography-root Typography-root-49 MuiTypography-h6 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        test
      </h6>
      <p
        class="MuiTypography-root LinkCard-subtitle-46 Typography-root-49 MuiTypography-body1"
        data-testid="typography"
      />
    </div>
    <div
      class="LinkCard-icon-47"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
      </svg>
    </div>
    <div
      class="MuiCollapse-root LinkCard-details-48 MuiCollapse-hidden"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          something
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LinkCard component renders onEnterd transition onClick  2`] = `
<div>
  <div
    class="MuiPaper-root MuiCard-root LinkCard-root-43 LinkCard-open-44 MuiPaper-elevation1 MuiPaper-rounded"
  >
    <div
      class="LinkCard-item-45"
      data-testid="linkCard-item"
    >
      <h6
        class="MuiTypography-root Typography-root-49 MuiTypography-h6 MuiTypography-gutterBottom"
        data-testid="typography"
      >
        test
      </h6>
      <p
        class="MuiTypography-root LinkCard-subtitle-46 Typography-root-49 MuiTypography-body1"
        data-testid="typography"
      />
    </div>
    <div
      class="LinkCard-icon-47"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.59 16.59L13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
        />
      </svg>
    </div>
    <div
      class="MuiCollapse-root LinkCard-details-48"
      style="min-height: 0px; height: 0px; transition-duration: 300ms;"
    >
      <div
        class="MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner"
        >
          something
        </div>
      </div>
    </div>
  </div>
</div>
`;
